infra/k8s-dev/worker-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          # image: viethung512/tts_worker
          image: us.gcr.io/vbee-tts-297514/worker
          resources:
            requests:
              cpu: '50m'
