infra/k8s-dev/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          # image: viethung512/tts_auth
          image: us.gcr.io/vbee-tts-297514/auth
      hostAliases:
        # - ip: '192.168.49.2'
        - ip: '104.154.102.226'
          hostnames:
            - 'tts-api.hung97.com'
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 4000
      targetPort: 4000
