infra/k8s-dev/training-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: training
  template:
    metadata:
      labels:
        app: training
    spec:
      containers:
        - name: training
          # image: viethung512/tts_training
          image: us.gcr.io/vbee-tts-297514/training
---
apiVersion: v1
kind: Service
metadata:
  name: training-srv
spec:
  selector:
    app: training
  ports:
    - name: training
      protocol: TCP
      port: 4000
      targetPort: 4000
