infra/k8s-dev/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'

    nginx.org/websocket-services: 'data-srv'
    certmanager.k8s.io/cluster-issuer: core-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/secure-backends: 'true'
    nginx.ingress.kubernetes.io/websocket-services: 'data-srv'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
spec:
  rules:
    - host: 'tts-api.hung97.com'
      http:
        paths:
          # auth service
          - path: /api/auth/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 4000
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 4000
          - path: /api/roles/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 4000

          # data service
          - path: /api/broadcaster/?(.*)
            backend:
              serviceName: data-srv
              servicePort: 4000
          - path: /api/sentences/?(.*)
            backend:
              serviceName: data-srv
              servicePort: 4000
          - path: /api/records/?(.*)
            backend:
              serviceName: data-srv
              servicePort: 4000
          - path: /api/voices/?(.*)
            backend:
              serviceName: data-srv
              servicePort: 4000
          - path: /api/allophone/?(.*)
            backend:
              serviceName: data-srv
              servicePort: 4000
          - path: /app-sockets/?(.*)
            backend:
              serviceName: data-srv
              servicePort: 4000
